Fix image style to align top
May want to do some calculations to center the image in the future

--- a/main.css
+++ b/main.css
@@ -109,7 +109,7 @@ body {
 }
 .large .share-container__image {
 	position: absolute;
-	top: -45%;
+	top: 0;
 	left: 0;
 }
 .small .image-container {
